# conanimator

./: .gitattributes  .gitignore  .gitmodules  Makefile.am  Makefile.in  README.md  STRUCTURE  autogen  autoremove  configure  configure.ac
animations/: korn.json  new.json
completions/: conanimator.zsh  reload.zsh
docs/: EPILOGUE  INTEGRATION  STRUCTURE
src/: animator.cpp  animator.hpp  examples.cpp  fs.cpp  loader.cpp  main.cpp  parser.cpp  scr.hpp
src/.deps/: main.Po
src/animations/: dots.json  dots.xml  example.json  example.xml
src/classes/: Animator.cpp  FrameAnimator.cpp  StringAnimator.cpp
src/defs/: console.cpp  fs.cpp  loader.cpp  maths.cpp  process.cpp  tests.cpp
src/include/: JSON.hpp  animations.hpp  animator.hpp  animators.hpp  clock.hpp  console.hpp  examples.hpp  frames.hpp  fs.hpp  loader.hpp  maths.hpp  parser.hpp  proc.hpp  stdscr.hpp  str.hpp  strx.hpp  tests.hpp
