# -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

# Details
AC_PREREQ([2.71])
AC_INIT([conanimator],[1.0.0],[cd.wiggins@outlook.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign subdir-objects])
AC_CONFIG_SRCDIR([src])

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

# Outputs
AC_CONFIG_FILES([
	Makefile
])

AC_OUTPUT
